consolelog changed to cl

--- a/.WebStorm9/config/templates/JavaScript.xml
+++ b/.WebStorm9/config/templates/JavaScript.xml
@@ -16,7 +16,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="consolelog" value="console.log($END$);" description="console.log quicker" toReformat="true" toShortenFQNames="true">
+  <template name="cl" value="console.log($END$);" description="console.log quicker" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
