--- a/.WebStorm9/config/templates/Zen HTML.xml
+++ b/.WebStorm9/config/templates/Zen HTML.xml
@@ -2,4 +2,28 @@
   <template name="style" value="&lt;style type=&quot;text/css&quot;&gt;&#10;    $END$&#10;&lt;/style&gt;" description="&lt;style&gt;...&lt;/style&gt;" toReformat="true" toShortenFQNames="true">
     <context />
   </template>
+  <template name="jquery1" value="&lt;script src=&quot;https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js&quot;&gt;&lt;/script&gt;" description="Inserts a jquery script tag" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="HTML_TEXT" value="true" />
+      <option name="HTML" value="true" />
+    </context>
+  </template>
+  <template name="jquery2" value="&lt;script src=&quot;https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js&quot;&gt;&lt;/script&gt;" description="Inserts a jquery script tag" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="HTML_TEXT" value="true" />
+      <option name="HTML" value="true" />
+    </context>
+  </template>
+  <template name="d3" value="&lt;script src=&quot;http://d3js.org/d3.v3.min.js&quot; charset=&quot;utf-8&quot;&gt;&lt;/script&gt;" description="Inserts a d3 script tag" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="HTML_TEXT" value="true" />
+      <option name="HTML" value="true" />
+    </context>
+  </template>
+  <template name="require" value="&lt;script src=&quot;http://requirejs.org/docs/release/2.1.16/minified/require.js&quot;&gt;&lt;/script&gt;" description="Inserts a requirejs script tag" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="HTML_TEXT" value="true" />
+      <option name="HTML" value="true" />
+    </context>
+  </template>
 </templateSet>
