--- a/.WebStorm9/config/templates/Zen HTML.xml
+++ b/.WebStorm9/config/templates/Zen HTML.xml
@@ -26,4 +26,10 @@
       <option name="HTML" value="true" />
     </context>
   </template>
+  <template name="angular" value="&lt;script src=&quot;https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js&quot;&gt;&lt;/script&gt;" description="Inserts an AngularJS script tag" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="HTML_TEXT" value="true" />
+      <option name="HTML" value="true" />
+    </context>
+  </template>
 </templateSet>
